<resources>
    <string name="app_name">PraktikGentong</string>
    <string name="about">About</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum felis leo, ut efficitur dui tempus a. Curabitur lobortis, odio eu ultricies luctus, magna urna blandit tellus, vestibulum viverra nibh arcu id dui. Maecenas augue lorem, porttitor non ante non, vehicula posuere ante. Duis libero ipsum, dapibus sit amet iaculis sit amet, molestie ut ligula. Pellentesque aliquet ultricies auctor. Vestibulum ut auctor nibh. Mauris tincidunt, turpis sit amet tincidunt interdum, felis ex fermentum diam, vitae aliquet elit turpis vitae enim. Vestibulum vitae hendrerit dolor. Proin eget felis at dolor interdum gravida. Vivamus dui arcu, malesuada et sapien nec, feugiat luctus diam. Nunc rhoncus urna sit amet nisi ultricies gravida. Curabitur quis risus at velit efficitur imperdiet. Vestibulum ullamcorper at ante id sollicitudin. Curabitur dictum metus in tortor sodales hendrerit. Vestibulum quis commodo metus, at tincidunt dui. Ut quis sagittis turpis. Nullam eu purus quis dolor sodales volutpat. Nam pellentesque lacus ullamcorper interdum ornare. Nulla facilisi. Cras et viverra mi. Morbi fermentum vehicula consectetur. Sed gravida, mi malesuada semper vehicula, neque diam ultricies eros, at tincidunt nisl est a ex. Nam sapien arcu, porta venenatis bibendum vitae, pulvinar eu purus. Nunc felis libero, laoreet quis arcu at, bibendum consequat eros. Nam sed elit nec sem pretium finibus at accumsan orci. Duis nec interdum sem, varius gravida nibh. Maecenas a tempor ligula. Sed feugiat euismod purus nec dignissim. Nunc commodo vitae lacus varius mattis. Fusce lorem lectus, sollicitudin et ipsum vel, vulputate placerat turpis. Aenean diam nunc, fringilla vitae mattis sed, accumsan ac neque. Phasellus ante justo, vestibulum non diam sit amet, pretium malesuada dolor. Integer sagittis diam ut pulvinar rhoncus. Nunc non ultricies urna, blandit cursus nulla. Mauris ut gravida ligula, vitae lacinia massa. Integer luctus libero tortor. Donec dignissim euismod dignissim. Nulla pellentesque, enim posuere molestie convallis, mi orci efficitur nulla, ut facilisis est dui quis magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer volutpat, ligula a laoreet consequat, nulla ligula molestie eros, at luctus quam nunc a ligula. Fusce tellus orci, rhoncus a eleifend at, rutrum id mauris. Etiam pellentesque tortor vel lorem varius lacinia. Aliquam suscipit fringilla posuere. Nam diam tortor, consequat sed neque sed, dictum laoreet risus. Aenean eget imperdiet eros. Etiam pharetra pellentesque ultrices. Integer ultrices vulputate dolor, nec rutrum augue cursus non. Duis non nisi arcu. Aenean ut augue sem. Vestibulum ornare erat sit amet dui facilisis, eu porttitor sapien ullamcorper. Vestibulum aliquet maximus urna, eget facilisis magna finibus eget. Maecenas ultrices odio nec turpis dapibus vulputate. Aliquam et ante turpis. Aliquam molestie porttitor cursus. Cras felis lectus, tempus quis suscipit at, tincidunt in nulla. Curabitur maximus scelerisque ipsum. Sed vehicula tempor mollis. Curabitur eu venenatis orci. In cursus erat et libero sodales posuere. Curabitur malesuada nisl at tincidunt maximus. Nam mattis nec massa in venenatis. In hac habitasse platea dictumst. Proin euismod tempor dolor. Aliquam maximus dolor finibus metus feugiat, lacinia accumsan felis vestibulum. Maecenas congue, magna at dictum iaculis, sapien urna consequat sem, ac aliquam ipsum turpis ut felis. Suspendisse rhoncus, ligula non hendrerit porttitor, nisl tortor dapibus eros, ac ornare elit turpis ac enim. Vivamus sodales eget tellus vitae hendrerit. Nulla vitae est eu tortor condimentum pharetra at a urna. Sed quis tristique dui, lobortis interdum justo. Nulla cursus dignissim mauris euismod venenatis. Maecenas pretium, purus non aliquet scelerisque, orci leo vestibulum nunc, a lacinia libero orci rhoncus elit. In in lectus ac massa ornare venenatis. Phasellus nec malesuada tellus. Ut quis metus non leo ornare semper a id nisl. Aenean ac interdum elit, ac porta tellus. Sed urna arcu, gravida sit amet leo porttitor, ultricies consequat nibh. Nullam a purus quis lorem finibus fringilla. Donec sit amet interdum ante, vel varius mi. Donec ut sapien odio. Phasellus faucibus augue orci, a ultricies elit ultricies sed. Vestibulum mollis augue et suscipit posuere. Praesent suscipit ipsum ac turpis finibus, vitae placerat lorem egestas. Morbi ornare consequat placerat. Vivamus sit amet urna dictum, ultrices lorem pharetra, ultrices nulla. Quisque at tellus sem. Maecenas eget pulvinar libero, at gravida enim. Nulla rhoncus arcu odio. Donec ac tortor imperdiet, accumsan justo sit amet, lobortis nisi. Vestibulum dignissim quis metus feugiat ultricies. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam maximus velit id auctor sodales. Maecenas bibendum ligula a leo volutpat, id ultricies dui ornare. Morbi id nibh ligula. Nunc vitae arcu faucibus, dignissim enim a, efficitur lacus. Vivamus ut purus efficitur, efficitur odio id, fringilla nunc. Mauris cursus arcu velit, vel bibendum dolor accumsan a. Ut facilisis molestie dignissim. Fusce nec facilisis erat. Vestibulum elementum quis metus quis malesuada. Cras accumsan lorem vel nisl tincidunt vulputate. Nullam at pulvinar tortor. Fusce mauris urna, efficitur vel felis eu, interdum vulputate justo. Donec nisi nibh, molestie nec purus nec, semper dictum diam. Aenean tincidunt libero a dictum ullamcorper. Nullam eu fringilla nisl, at volutpat metus. Nam tempor ante vitae tellus viverra accumsan. Nullam fringilla, nisi nec pharetra cursus, justo leo venenatis nibh, quis consequat ex nulla a lectus. Donec ornare at leo in hendrerit. Mauris vitae ex nunc. Phasellus tortor nisl, pharetra at varius pretium, venenatis in dui. Sed varius sagittis elit, non viverra risus blandit sed. Quisque eros nisi, aliquet et nulla id, lobortis lobortis risus. Sed quis iaculis ipsum. Nulla rhoncus ligula at bibendum vulputate. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris urna lacus, efficitur vulputate interdum luctus, elementum lacinia felis. Etiam ac dolor malesuada nisi hendrerit condimentum at at nibh. Curabitur non rhoncus nisi, a vehicula nulla. Proin ut tellus sit amet ante efficitur ultricies sed ac velit. Vivamus et arcu tincidunt, hendrerit tellus id, convallis turpis. Etiam quis velit non lectus venenatis ultrices. Curabitur accumsan facilisis consequat. Suspendisse blandit suscipit elementum. Vivamus at nulla ipsum. Phasellus finibus varius tortor ac pretium. Praesent vel odio dignissim, dignissim ante vel, posuere tellus. Cras malesuada elementum felis fringilla accumsan. Curabitur imperdiet pharetra tellus in ultricies. In imperdiet tempus aliquam. Maecenas vel condimentum dui. Aliquam lacinia arcu eu ex interdum pellentesque. Cras at euismod est. Nunc iaculis sem augue, et laoreet ante accumsan id. Morbi a porta ipsum. Praesent quis mi ante. Mauris venenatis nisi eget sem pharetra iaculis. Nullam ante dui, suscipit non porttitor in, venenatis sed mauris. Sed et scelerisque eros. Vivamus maximus nulla eget justo auctor porta. Duis lobortis, sem ac consequat viverra, mi est malesuada ipsum, eu pulvinar lectus justo quis nunc. Aenean ullamcorper nisl quis lorem dictum elementum. Morbi ut eleifend urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed bibendum interdum risus eu fringilla. Pellentesque tincidunt neque ante, a luctus ipsum dignissim venenatis. Morbi a lectus eu libero sodales faucibus. Donec augue ante, hendrerit vel erat eu, ultricies sagittis tortor. Donec molestie lorem at tortor malesuada sodales. Nunc elit metus, suscipit non felis quis, cursus viverra arcu. Curabitur vel pretium nulla, sed suscipit ligula. Sed gravida sodales facilisis. Nulla nibh lacus, aliquet quis nisl vel, auctor tempor elit. Morbi lacinia magna id purus posuere hendrerit. Ut iaculis lacus ut sollicitudin tincidunt. Sed tempus faucibus diam. Maecenas at rutrum mi, id posuere ante. Aenean accumsan a neque at porttitor. Vestibulum luctus, ipsum vel rhoncus maximus, nunc nunc tempus orci, quis aliquam nulla arcu eu libero. Fusce vel fermentum lectus, nec vehicula mi. Cras varius lorem risus, vel interdum ante aliquet sit amet. Nullam venenatis pharetra volutpat. Fusce ultrices nisi in leo sodales, ac elementum elit viverra. Ut sed ex tincidunt est condimentum tincidunt. Nam nulla justo, auctor vitae urna ac, interdum fringilla dolor. Aenean non purus volutpat, dictum nibh in, consectetur justo. Donec luctus felis odio, vitae ultricies mauris tempus eu. Quisque vel finibus urna, et ullamcorper lorem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; In pharetra arcu non ex faucibus, quis mollis justo iaculis. Vivamus vitae sem et est finibus auctor sed vel est. Etiam faucibus accumsan lorem, gravida congue mauris tincidunt vitae. Curabitur eu ligula convallis, blandit ex quis, pulvinar magna. Pellentesque a lorem sapien. Etiam sed interdum sem. Phasellus elit nisi, placerat id est sit amet, maximus efficitur augue. Donec gravida dolor sed urna faucibus, id venenatis sapien tempor. In convallis lectus non augue sollicitudin vulputate vel quis libero. Phasellus imperdiet elementum malesuada. Curabitur neque neque, dignissim non placerat et, aliquet id elit. Mauris nec tristique arcu, sit amet ullamcorper velit. Nulla dignissim rutrum pulvinar. In condimentum vel lorem et placerat. Cras lorem urna, scelerisque quis lacinia ac, porta varius odio. Duis pharetra lectus quis sapien fringilla fermentum. Donec sed tellus vitae nibh rhoncus efficitur sed sit amet lorem. Duis ac convallis quam. Ut aliquam pulvinar tempus. Vivamus mi velit, ultricies quis leo eget, ultrices posuere diam. Aenean ornare ex nec lacinia venenatis. Sed aliquam arcu magna, eu imperdiet risus ullamcorper sit amet. Cras tristique vehicula tortor, a semper sapien ultrices sed. Nunc malesuada felis quis dolor imperdiet vehicula. In non ante et libero pellentesque tristique. Nunc aliquet, nunc quis blandit dictum, justo sapien sollicitudin ante, ac tristique tortor sapien et augue. Vivamus eu augue eu eros tempus interdum. Vivamus et massa bibendum, molestie orci in, feugiat lacus. Mauris ullamcorper auctor massa in efficitur. Curabitur in nibh leo. Morbi facilisis justo ut consectetur accumsan. Aenean hendrerit libero ex, et iaculis nunc malesuada eget. Praesent sit amet ultricies felis, in congue leo. Etiam ut enim vitae turpis ornare varius in eu augue. Ut suscipit congue molestie. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus elementum metus in tempus luctus. Sed elit elit, hendrerit ullamcorper leo id, sollicitudin hendrerit nulla. Curabitur laoreet venenatis vehicula. Suspendisse et velit nibh. Phasellus ut rhoncus dolor. Nullam eget ipsum nec lacus vulputate egestas. Sed facilisis dui dui, non consectetur ex rhoncus ultricies.</string>
    <string name="name_user">Krisna Yudha Pratama</string>
    <string name="email_user">krisnayudhap117@gmail.com</string>
    <string name="city_image">City Image</string>
    <string name="city_name">-</string>
    <string name="city_detail">-</string>
    <string name="header">Dicoding IDCamp2024</string>
</resources>