<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Toolbar with Custom Back Icon -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:title="@string/about"
        android:titleTextColor="@android:color/white" />

    <!-- CircleImageView untuk menampilkan foto dengan bentuk lingkaran -->

    <!-- Konten Halaman About -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="222dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_user"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_user"
        android:textSize="16sp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center" />

</LinearLayout>
