<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailCityActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/header"
                layout="@layout/header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Image with Text Side by Side -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Image -->
                <ImageView
                    android:id="@+id/ivCity"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="16dp"
                    android:src="@color/cardview_shadow_start_color"
                    android:contentDescription="@string/city_image"/>

                <!-- Text content -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="City Name" />

                    <TextView
                        android:id="@+id/tvCityDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:text="@string/city_detail"
                        android:layout_marginTop="8dp"
                        tools:text="@string/lorem_ipsum" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
